--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,3 +1,7 @@
+header * {
+  margin: 0;
+}
+
 #topnav {
   display: flex;
   align-items: baseline;
